--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
 API_VERSION=1
 TOKEN_EXP_DAYS=1
-MONGODB_URI=mongodb://localhost:27017/test
+MONGODB_URI=mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+1.6.0
 PAGE_LIMIT=15
